better connection test

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -170,14 +170,18 @@ jobs:
           route add 10.82.0.0 mask 255.255.255.0 $WSLIP
           route add 10.42.0.0 mask 255.255.255.0 $WSLIP
 
+          apt install openssh-server
+          systemctl enable ssh
+          systemctl start ssh
+
       - name: TEST STEP
         if: runner.os == 'Windows'
         run: |
           $ip = (wsl -u root hostname -I).Split()[0].Trim()
           $ip
-          ping -n 5 $ip
-          ping -n 5 10.87.82.87
-          ping -n 5 10.42.0.42
+          Test-NetConnection $ip -Port 22
+          Test-NetConnection 10.87.82.87 -Port 8587
+          Test-NetConnection 10.42.0.42 -Port 5000
           wsl -u root iptables -t nat -L -v -n
           wsl -u root iptables -t filter -L -v -n
           wsl -u root ip addr show
@@ -219,9 +223,9 @@ jobs:
         run: |
           $ip = (wsl -u root hostname -I).Split()[0].Trim()
           $ip
-          ping -n 5 $ip
-          ping -n 5 10.87.82.87
-          ping -n 5 10.42.0.42
+          Test-NetConnection $ip -Port 22
+          Test-NetConnection 10.87.82.87 -Port 8587
+          Test-NetConnection 10.42.0.42 -Port 5000
           wsl -u root iptables -t nat -L -v -n
           wsl -u root iptables -t filter -L -v -n
           wsl -u root ip addr show
@@ -236,9 +240,9 @@ jobs:
         run: |
           $ip = (wsl -u root hostname -I).Split()[0].Trim()
           $ip
-          ping -n 5 $ip
-          ping -n 5 10.87.82.87
-          ping -n 5 10.42.0.42
+          Test-NetConnection $ip -Port 22
+          Test-NetConnection 10.87.82.87 -Port 8587
+          Test-NetConnection 10.42.0.42 -Port 5000
           wsl -u root iptables -t nat -L -v -n
           wsl -u root iptables -t filter -L -v -n
           wsl -u root ip addr show
