--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -167,9 +167,9 @@ jobs:
           wsl -u root sysctl -w net.ipv4.ip_forward=1
           wsl -u root bash -c "curl -fsSL https://get.docker.com | sh"
           wsl -u root docker compose -f $COMPOSE_PATH up --build --detach
-          wsl -u root iptables -t filter -A FORWARD -i eth0 -d 10.42.0.0/24 -j DROP
-          wsl -u root iptables -t filter -A FORWARD -i eth0 -d 10.87.82.0/24 -j ACCEPT
-          wsl -u root iptables -t nat -A POSTROUTING -o eth0 -s 10.87.82.0/24 -j MASQUERADE
+          wsl -u root iptables -t filter -A FORWARD -d 10.42.0.0/24 -j DROP
+          wsl -u root iptables -t filter -A FORWARD -d 10.87.82.0/24 -j ACCEPT
+          wsl -u root iptables -t nat -A POSTROUTING -s 10.87.82.0/24 -j MASQUERADE
           route add 10.42.0.0 mask 255.255.255.0 $WSL_IP
           route add 10.87.82.0 mask 255.255.255.0 $WSL_IP
 
@@ -220,38 +220,10 @@ jobs:
         working-directory: viridian/reef
         run: ${{ env.SUDO }} cargo test --package SeasideVPN-Reef --lib -- --nocapture --show-output
 
-      - name: TEST STEP
-        if: runner.os == 'Windows'
-        run: |
-          $ip = (wsl -u root hostname -I).Split()[0].Trim()
-          $ip
-          ping -n 5 $ip
-          Test-NetConnection 10.87.82.87 -Port 8587
-          Test-NetConnection 10.42.0.42 -Port 5000
-          Find-NetRoute -RemoteIPAddress 10.87.82.87
-          Find-NetRoute -RemoteIPAddress 10.42.0.42
-          wsl -u root iptables -t nat -L -v -n
-          wsl -u root iptables -t filter -L -v -n
-          wsl -u root ip addr show
-
       - name: Start Background Server
         id: start-background-server
         working-directory: .github/scripts
         run: ${{ env.SUDO }} npm run configure-viridian-test
-
-      - name: TEST STEP
-        if: runner.os == 'Windows'
-        run: |
-          $ip = (wsl -u root hostname -I).Split()[0].Trim()
-          $ip
-          ping -n 5 $ip
-          Test-NetConnection 10.87.82.87 -Port 8587
-          Test-NetConnection 10.42.0.42 -Port 5000
-          Find-NetRoute -RemoteIPAddress 10.87.82.87
-          Find-NetRoute -RemoteIPAddress 10.42.0.42
-          wsl -u root iptables -t nat -L -v -n
-          wsl -u root iptables -t filter -L -v -n
-          wsl -u root ip addr show
 
       - name: Load .ENV File
         uses: aarcangeli/load-dotenv@v1
