--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -167,9 +167,9 @@ jobs:
           wsl -u root sysctl -w net.ipv4.ip_forward=1
           wsl -u root bash -c "curl -fsSL https://get.docker.com | sh"
           wsl -u root docker compose -f $COMPOSE_PATH up --build --detach
-          wsl -u root iptables -t filter -A FORWARD -d 10.42.0.0/24 -j DROP
-          wsl -u root iptables -t filter -A FORWARD -d 10.87.82.0/24 -j ACCEPT
-          wsl -u root iptables -t nat -A POSTROUTING -s 10.87.82.0/24 -j MASQUERADE
+          wsl -u root iptables -t filter -A FORWARD -i eth0 -d 10.42.0.0/24 -j DROP
+          wsl -u root iptables -t filter -A FORWARD -i eth0 -d 10.87.82.0/24 -j ACCEPT
+          wsl -u root iptables -t nat -A POSTROUTING -i eth0 -d 10.87.82.0/24 -j MASQUERADE
           route add 10.42.0.0 mask 255.255.255.0 $WSL_IP
           route add 10.87.82.0 mask 255.255.255.0 $WSL_IP
 
