--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -172,6 +172,7 @@ jobs:
           wsl -u root iptables -t nat -A POSTROUTING -d 10.87.82.0/24 -j MASQUERADE
           route add 10.42.0.0 mask 255.255.255.0 $WSL_IP
           route add 10.87.82.0 mask 255.255.255.0 $WSL_IP
+          wsl -u root tcpdump -i eth0 -n -nn > ./ip-log.txt &
 
       - name: TEST STEP
         if: runner.os == 'Windows'
@@ -187,6 +188,7 @@ jobs:
           wsl -u root iptables -t filter -L -v -n
           wsl -u root ip addr show
           wsl -u root ip route show
+          wsl -u root cat ./ip-log.txt
 
       - name: Install NodeJS 🪢
         uses: actions/setup-node@v4.1.0
