--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -157,7 +157,8 @@ jobs:
           $COMPOSE_PATH = (wsl wslpath -a .\\viridian\\algae\\docker\\compose.standalone.yml).Trim()
           wsl -u root sysctl -w net.ipv4.ip_forward=1
           wsl -u root sh -c "curl -fsSL https://get.docker.com | sh"
-          wsl -u root sysctl restart docker
+          wsl -u root rm -rf /var/lib/docker/plugins/* /etc/docker/plugins/*
+          wsl -u root service docker restart
           wsl -u root docker compose -f $COMPOSE_PATH up --build --detach
           route add 10.42.0.0 mask 255.255.255.0 $WSL_IP
           route add 10.87.82.0 mask 255.255.255.0 $WSL_IP
@@ -257,6 +258,7 @@ jobs:
           wsl -u root docker compose -f $COMPOSE_PATH logs
           wsl -u root journalctl -k | grep "VPN"
           wsl -u root journalctl -u docker
+          wsl -u root docker plugin ls
 
       - name: Install NodeJS 🪢
         uses: actions/setup-node@v4.1.0
