--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -149,6 +149,8 @@ jobs:
           set-as-default: true
           additional-packages:
             tcpdump
+            podman
+            podman-compose
 
       - name: Post-Configure WSL
         if: runner.os == 'Windows'
@@ -156,10 +158,7 @@ jobs:
           $WSL_IP = (wsl -u root hostname -I).Split()[0].Trim()
           $COMPOSE_PATH = (wsl wslpath -a .\\viridian\\algae\\docker\\compose.standalone.yml).Trim()
           wsl -u root sysctl -w net.ipv4.ip_forward=1
-          wsl -u root sh -c "curl -fsSL https://get.docker.com | sh"
-          wsl -u root rm -rf /var/lib/docker/plugins/* /etc/docker/plugins/*
-          wsl -u root service docker restart
-          wsl -u root docker compose -f $COMPOSE_PATH up --build --detach
+          wsl -u root podman compose -f $COMPOSE_PATH up --build --detach
           route add 10.42.0.0 mask 255.255.255.0 $WSL_IP
           route add 10.87.82.0 mask 255.255.255.0 $WSL_IP
           $LOCAL_IP = (Find-NetRoute -RemoteIPAddress $WSL_IP | Select-Object -First 1).IPAddress
@@ -189,7 +188,7 @@ jobs:
           $WSL_IP = (wsl -u root hostname -I).Split()[0].Trim()
           $COMPOSE_PATH = (wsl wslpath -a .\\viridian\\algae\\docker\\compose.standalone.yml).Trim()
           $WSL_IP
-          wsl -u root docker compose -f $COMPOSE_PATH ps
+          wsl -u root podman compose -f $COMPOSE_PATH ps
           ping -n 5 $WSL_IP
           ping -n 5 10.87.82.87
           ping -n 5 10.42.0.42
@@ -259,8 +258,9 @@ jobs:
           route print 10.87.82.0
           route print 10.87.82.*
           Get-NetFirewallRule | Where-Object { $_.Enabled -eq 'True' } | Format-Table DisplayName, Direction, Action, Profile, Enabled
-          wsl -u root docker compose -f $COMPOSE_PATH logs
+          wsl -u root podman compose -f $COMPOSE_PATH logs
           wsl -u root journalctl -k | grep "VPN"
+          wsl -u root journalctl -u podman
           wsl -u root journalctl -u docker
 
       - name: Install NodeJS 🪢
