--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -149,8 +149,10 @@ jobs:
           set-as-default: true
           additional-packages:
             tcpdump
-            podman
-            podman-compose
+            apt-transport-https
+            ca-certificates
+            curl
+            gnupg2
 
       - name: Post-Configure WSL
         if: runner.os == 'Windows'
@@ -158,7 +160,8 @@ jobs:
           $WSL_IP = (wsl -u root hostname -I).Split()[0].Trim()
           $COMPOSE_PATH = (wsl wslpath -a .\\viridian\\algae\\docker\\compose.standalone.yml).Trim()
           wsl -u root sysctl -w net.ipv4.ip_forward=1
-          wsl -u root podman compose -f $COMPOSE_PATH up --build --detach
+          wsl -u root sh -c ". /etc/os-release && curl -fsSL https://download.docker.com/linux/${ID}/gpg | tee /etc/apt/trusted.gpg.d/docker.asc && echo \"deb [arch=amd64] https://download.docker.com/linux/${ID} ${VERSION_CODENAME} stable\" | tee /etc/apt/sources.list.d/docker.list && apt update && apt install docker-ce docker-ce-cli containerd.io && systemctl start docker"
+          wsl -u root docker compose -f $COMPOSE_PATH up --build --detach
           route add 10.42.0.0 mask 255.255.255.0 $WSL_IP
           route add 10.87.82.0 mask 255.255.255.0 $WSL_IP
           $LOCAL_IP = (Find-NetRoute -RemoteIPAddress $WSL_IP | Select-Object -First 1).IPAddress
@@ -188,7 +191,7 @@ jobs:
           $WSL_IP = (wsl -u root hostname -I).Split()[0].Trim()
           $COMPOSE_PATH = (wsl wslpath -a .\\viridian\\algae\\docker\\compose.standalone.yml).Trim()
           $WSL_IP
-          wsl -u root podman compose -f $COMPOSE_PATH ps
+          wsl -u root docker compose -f $COMPOSE_PATH ps
           ping -n 5 $WSL_IP
           ping -n 5 10.87.82.87
           ping -n 5 10.42.0.42
@@ -258,9 +261,8 @@ jobs:
           route print 10.87.82.0
           route print 10.87.82.*
           Get-NetFirewallRule | Where-Object { $_.Enabled -eq 'True' } | Format-Table DisplayName, Direction, Action, Profile, Enabled
-          wsl -u root podman compose -f $COMPOSE_PATH logs
+          wsl -u root docker compose -f $COMPOSE_PATH logs
           wsl -u root journalctl -k | grep "VPN"
-          wsl -u root journalctl -u podman
           wsl -u root journalctl -u docker
 
       - name: Install NodeJS 🪢
