--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -149,11 +149,6 @@ jobs:
           set-as-default: true
           additional-packages:
             tcpdump
-            apt-transport-https
-            ca-certificates
-            iptables
-            curl
-            gnupg2
 
       - name: Post-Configure WSL
         if: runner.os == 'Windows'
@@ -161,7 +156,7 @@ jobs:
           $WSL_IP = (wsl -u root hostname -I).Split()[0].Trim()
           $COMPOSE_PATH = (wsl wslpath -a .\\viridian\\algae\\docker\\compose.standalone.yml).Trim()
           wsl -u root sysctl -w net.ipv4.ip_forward=1
-          wsl -u root sh -c "set -x && curl -fsSL https://download.docker.com/linux/ubuntu/gpg | tee /etc/apt/trusted.gpg.d/docker.asc && echo 'deb [arch=amd64] https://download.docker.com/linux/ubuntu noble stable' | tee /etc/apt/sources.list.d/docker.list && apt-get update && apt-get -y install docker-ce docker-ce-cli containerd.io && systemctl start docker"
+          wsl -u root sh -c "curl -fsSL https://get.docker.com | sh"
           wsl -u root docker compose -f $COMPOSE_PATH up --build --detach
           route add 10.42.0.0 mask 255.255.255.0 $WSL_IP
           route add 10.87.82.0 mask 255.255.255.0 $WSL_IP
@@ -261,6 +256,8 @@ jobs:
           route print 10.87.82.87
           route print 10.87.82.0
           route print 10.87.82.*
+          wsl -u root docker network ls
+          wsl -u root docker volume ls
           Get-NetFirewallRule | Where-Object { $_.Enabled -eq 'True' } | Format-Table DisplayName, Direction, Action, Profile, Enabled
           wsl -u root docker compose -f $COMPOSE_PATH logs
           wsl -u root journalctl -k | grep "VPN"
