--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -157,7 +157,7 @@ jobs:
           $COMPOSE_PATH = (wsl wslpath -a .\\viridian\\algae\\docker\\compose.standalone.yml).Trim()
           wsl -u root sysctl -w net.ipv4.ip_forward=1
           wsl -u root sh -c "curl -fsSL https://get.docker.com | sh"
-          wsl -u root docker compose -f $COMPOSE_PATH up --build --force-recreate --detach
+          wsl -u root docker compose -f $COMPOSE_PATH up --build
           route add 10.42.0.0 mask 255.255.255.0 $WSL_IP
           route add 10.87.82.0 mask 255.255.255.0 $WSL_IP
           $LOCAL_IP = (Find-NetRoute -RemoteIPAddress $WSL_IP | Select-Object -First 1).IPAddress
