--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -147,121 +147,10 @@ jobs:
         with:
           distribution: Ubuntu-24.04
           set-as-default: true
-          additional-packages:
-            tcpdump
 
       - name: Post-Configure WSL
         if: runner.os == 'Windows'
-        run: |
-          $WSL_IP = (wsl -u root hostname -I).Split()[0].Trim()
-          $COMPOSE_PATH = (wsl wslpath -a .\\viridian\\algae\\docker\\compose.standalone.yml).Trim()
-          wsl -u root sysctl -w net.ipv4.ip_forward=1
-          wsl -u root sh -c "curl -fsSL https://get.docker.com | sh"
-          wsl -u root docker compose -f $COMPOSE_PATH up --build
-          route add 10.42.0.0 mask 255.255.255.0 $WSL_IP
-          route add 10.87.82.0 mask 255.255.255.0 $WSL_IP
-          $LOCAL_IP = (Find-NetRoute -RemoteIPAddress $WSL_IP | Select-Object -First 1).IPAddress
-          wsl -u root iptables -t filter -A DOCKER-USER -s $LOCAL_IP -d 10.42.0.0/24 -j LOG --log-prefix "VPN REJECT FORWARD: "
-          wsl -u root iptables -t filter -A DOCKER-USER -s $LOCAL_IP -d 10.42.0.0/24 -j REJECT
-          wsl -u root iptables -t filter -A DOCKER-USER -s $LOCAL_IP -d 10.87.82.0/24 -j LOG --log-prefix "VPN ACCEPT FORWARD: "
-          wsl -u root iptables -t filter -A DOCKER-USER -s $LOCAL_IP -d 10.87.82.0/24 -j ACCEPT
-          wsl -u root iptables -t filter -A DOCKER-USER -d $LOCAL_IP -s 10.42.0.0/24 -j LOG --log-prefix "VPN REJECT BACKWARD: "
-          wsl -u root iptables -t filter -A DOCKER-USER -d $LOCAL_IP -s 10.42.0.0/24 -j REJECT
-          wsl -u root iptables -t filter -A DOCKER-USER -d $LOCAL_IP -s 10.87.82.0/24 -j LOG --log-prefix "VPN ACCEPT BACKWARD: "
-          wsl -u root iptables -t filter -A DOCKER-USER -d $LOCAL_IP -s 10.87.82.0/24 -j ACCEPT
-          wsl -u root iptables -t nat -A POSTROUTING -s $LOCAL_IP -d 10.87.82.0/24 -j LOG --log-prefix "VPN MASQUERADE: "
-          wsl -u root iptables -t nat -A POSTROUTING -s $LOCAL_IP -d 10.87.82.0/24 -j MASQUERADE
-          New-NetFirewallRule -DisplayName "Allow All to WSL2" -Direction Inbound -Action Allow -RemoteAddress $WSL_IP -Protocol Any -Profile Any -Enabled True
-          New-NetFirewallRule -DisplayName "Allow All to WSL2" -Direction Outbound -Action Allow -RemoteAddress $WSL_IP -Protocol Any -Profile Any -Enabled True
-          New-NetFirewallRule -DisplayName "Allow All to WSL2" -Direction Inbound -Action Allow -LocalAddress $WSL_IP -Protocol Any -Profile Any -Enabled True
-          New-NetFirewallRule -DisplayName "Allow All to WSL2" -Direction Outbound -Action Allow -LocalAddress $WSL_IP -Protocol Any -Profile Any -Enabled True
-          wsl -u root sh -c "tcpdump -i eth0 > ./ip-log-eth0.txt 2>&1 &"
-          wsl -u root sh -c "tcpdump -i any > ./ip-log-any.txt 2>&1 &"
-          wsl -u root sh -c "tcpdump -i lo > ./ip-log-lo.txt 2>&1 &"
-          wsl -u root ls .
-          wsl -u root sleep 30
-
-      - name: TEST STEP
-        if: runner.os == 'Windows'
-        run: |
-          $WSL_IP = (wsl -u root hostname -I).Split()[0].Trim()
-          $COMPOSE_PATH = (wsl wslpath -a .\\viridian\\algae\\docker\\compose.standalone.yml).Trim()
-          $WSL_IP
-          wsl -u root docker compose -f $COMPOSE_PATH ps
-          ping -n 5 $WSL_IP
-          ping -n 5 10.87.82.87
-          ping -n 5 10.42.0.42
-          wsl -u root ping -c 5 10.87.82.87
-          wsl -u root ping -c 5 10.42.0.42
-          wsl -u root iptables -t filter -S
-          wsl -u root iptables -t nat -S
-          $tcp = New-Object Net.Sockets.TcpClient
-          try {
-              $tcp.Connect("10.87.82.87", 8587)
-              if ($tcp.Connected) {
-                  Write-Host "Connected successfully to 10.87.82.87!"
-              } else {
-                  Write-Host "Failed to connect to 10.87.82.87."
-              }
-          }
-          catch {
-              Write-Host "Connection error to 10.87.82.87:"
-              Write-Host $_.Exception.Message
-              Write-Host $_.Exception.StackTrace
-              if ($_.Exception.InnerException) {
-                  Write-Host "Inner exception: $($_.Exception.InnerException.Message)"
-              }
-          }
-          finally {
-              $tcp.Close()
-          }
-          $tcp = New-Object Net.Sockets.TcpClient
-          try {
-              $tcp.Connect("10.42.0.42", 5000)
-              if ($tcp.Connected) {
-                  Write-Host "Connected successfully to 10.42.0.42!"
-              } else {
-                  Write-Host "Failed to connect to 10.42.0.42."
-              }
-          }
-          catch {
-              Write-Host "Connection error to 10.42.0.42:"
-              Write-Host $_.Exception.Message
-              Write-Host $_.Exception.StackTrace
-              if ($_.Exception.InnerException) {
-                  Write-Host "Inner exception: $($_.Exception.InnerException.Message)"
-              }
-          }
-          finally {
-              $tcp.Close()
-          }
-          wsl -u root nc -vz 10.87.82.87 8587
-          wsl -u root nc -vz 10.42.0.42 5000
-          wsl -u root iptables -t filter -L -v -n
-          wsl -u root iptables -t nat -L -v -n
-          Find-NetRoute -RemoteIPAddress 10.87.82.87
-          Find-NetRoute -RemoteIPAddress 10.42.0.42
-          wsl -u root iptables -t filter -L DOCKER-USER -v -n --line-numbers
-          wsl -u root iptables -t nat -L POSTROUTING -v -n --line-numbers
-          wsl -u root ip addr show
-          wsl -u root ip route show
-          wsl -u root ls .
-          wsl echo "eth0 dump:"
-          wsl -u root cat ./ip-log-eth0.txt
-          wsl echo "any dump:"
-          wsl -u root cat ./ip-log-any.txt
-          wsl echo "lo dump:"
-          wsl -u root cat ./ip-log-lo.txt
-          route print
-          route print 10.87.82.87
-          route print 10.87.82.0
-          route print 10.87.82.*
-          wsl -u root docker network ls
-          wsl -u root docker volume ls
-          Get-NetFirewallRule | Where-Object { $_.Enabled -eq 'True' } | Format-Table DisplayName, Direction, Action, Profile, Enabled
-          wsl -u root docker compose -f $COMPOSE_PATH logs
-          wsl -u root journalctl -k | grep "VPN"
-          wsl -u root journalctl -u docker
+        run: exit 1
 
       - name: Install NodeJS 🪢
         uses: actions/setup-node@v4.1.0
